--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
             <a class="login-butt" href="login.html"><span>Login</span></a>
         </div>
         <div class="col-xs-1">
-            <div class="signup-butt btn btn-primary">Sign up</div>
+            <a href="signup.html"><div class="signup-butt btn btn-primary">Sign up</div></a>
         </div>
     </div>
     <div class="container">
