--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -15,8 +15,32 @@
 </head>
 
 <body>
-    <div class="wrapper">
-    dash
+    <div class="col-xs-12 header">
+        <div class="col-xs-10">
+            <h1 class="header-text">Dashboard</h1>
+        </div>
+    </div>
+    <div class="container">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Room number</th>
+                    <th>Public Key</th>
+                    <th>Photo</th>
+                </tr>
+            </thead>
+        <tbody class="tennant-body">
+        </tbody>
+            {{#each residents}}
+            <tr>
+                <td>{{this.name}}</td>
+                <td>{{this.room}}</td>
+                <td>{{this.publicKey}}</td>
+                <td><img src="{{this.photoURL}}" alt="Photo Missing"></td>
+            </tr>
+            {{/each}}
+        </table>
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
