--- a/client/login.html
+++ b/client/login.html
@@ -15,14 +15,78 @@
 </head>
 
 <body>
-    <div class="wrapper">
-    login
+    <div class="col-xs-12 header">
+        <div class="col-xs-10">
+            <span class="header-text">Gate Keeper</span><span class="header-subtext">a smarter solution to restricted access management</span>
+        </div>
+    </div>
+    <div class="container">
+        <div class="form-horizontal">
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="username">Username:</label>
+                <div class="col-sm-10">
+                    <input type="input" class="form-control" id="username" placeholder="Enter username">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="pwd">Password:</label>
+                <div class="col-sm-10"> 
+                    <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+                </div>
+            </div>
+            <div class="form-group"> 
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button class="btn btn-default">Submit</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-10 col-xs-offset-2 error alert alert-danger">
+            <h2>Sorry an error has occured try again.</h2>
+        </div>
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <script type="text/javascript">
+var $userField, $passField, $button;
+var $error;
+
+$(function() {
+    $userField = $("#username");
+    $passField = $("#pwd");
+    $button = $(".btn");
+    $error = $(".error");
+
+    $button.on("click", function(e) {
+        console.log($userField.val());
+        console.log($passField.val());
+        submitLogIn($userField.val(), $passField.val());
+    });
+});
+
+function submitLogIn(username, pwd) {
+    
+    $.ajax("", {
+        
+    })
+
+    var success = true;
+
+    if (success) {
+        window.location.href = "dashboard.html";
+    } else {
+        displayError();
+    }
+}
+
+function displayError() {
+    $error.slideDown();
+    setTimeout(function() {
+        $error.slideUp();
+    }, 5000);
+}
+
 </script>
 
 </body>
