--- a/client/signup.html
+++ b/client/signup.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <div class="wrapper">
-    sign up
+    <div class="container">
+
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
