--- a/client/login.html
+++ b/client/login.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-<meta charset="UTF-8">
-<title>Gate Keeper login</title>
+    <meta charset="UTF-8">
+    <title>Gate Keeper login</title>
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="author" content="Carl Schriever">
-<meta name="description" content="Gate Keeper's login page">
-<meta name="robots" content="index, follow">
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/main.css">
-<!--<link rel="shortcut icon" href="/favicon.ico"/>-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Carl Schriever">
+    <meta name="description" content="Gate Keeper's login page">
+    <meta name="robots" content="index, follow">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <!--<link rel="shortcut icon" href="/favicon.ico"/>-->
 </head>
 
 <body>
@@ -30,11 +30,11 @@
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2" for="pwd">Password:</label>
-                <div class="col-sm-10"> 
+                <div class="col-sm-10">
                     <input type="password" class="form-control" id="pwd" placeholder="Enter password">
                 </div>
             </div>
-            <div class="form-group"> 
+            <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button class="btn btn-default">Submit</button>
                 </div>
@@ -45,49 +45,49 @@
         </div>
     </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<script type="text/javascript">
-var $userField, $passField, $button;
-var $error;
+    <script>
+        var $userField, $passField, $button;
+        var $error;
 
-$(function() {
-    $userField = $("#username");
-    $passField = $("#pwd");
-    $button = $(".btn");
-    $error = $(".error");
+        $(function () {
+            $userField = $("#username");
+            $passField = $("#pwd");
+            $button = $(".btn");
+            $error = $(".error");
 
-    $button.on("click", function(e) {
-        console.log($userField.val());
-        console.log($passField.val());
-        submitLogIn($userField.val(), $passField.val());
-    });
-});
+            $button.on("click", function (e) {
+                console.log($userField.val());
+                console.log($passField.val());
+                submitLogIn($userField.val(), $passField.val());
+            });
+        });
 
-function submitLogIn(username, pwd) {
-    
-    $.ajax("", {
-        
-    })
+        function submitLogIn(username, pwd) {
 
-    var success = true;
+            $.ajax("", {
 
-    if (success) {
-        window.location.href = "dashboard.html";
-    } else {
-        displayError();
-    }
-}
+            })
 
-function displayError() {
-    $error.slideDown();
-    setTimeout(function() {
-        $error.slideUp();
-    }, 5000);
-}
+            var success = true;
 
-</script>
+            if (success) {
+                window.location.href = "/dashboard";
+            } else {
+                displayError();
+            }
+        }
+
+        function displayError() {
+            $error.slideDown();
+            setTimeout(function () {
+                $error.slideUp();
+            }, 5000);
+        }
+
+    </script>
 
 </body>
 
