--- a/client/signup.html
+++ b/client/signup.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-<meta charset="UTF-8">
-<title>Sign up!</title>
+    <meta charset="UTF-8">
+    <title>Sign up!</title>
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="author" content="Carl Schriever">
-<meta name="description" content="Gate Keeper's sign up page">
-<meta name="robots" content="index, follow">
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/main.css">
-<!--<link rel="shortcut icon" href="/favicon.ico"/>-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Carl Schriever">
+    <meta name="description" content="Gate Keeper's sign up page">
+    <meta name="robots" content="index, follow">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <!--<link rel="shortcut icon" href="/favicon.ico"/>-->
 </head>
 
 <body>
@@ -19,11 +19,8 @@
 
     </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<script type="text/javascript">
-</script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
 
