Minor dashboard style improvements

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -17,7 +17,7 @@
 <body>
     <div class="col-xs-12 header">
         <div class="col-xs-12">
-            <h1 class="header-text">{{name}}'s Dashboard</h1>
+            <h1 class="header-text">{{name}} Dashboard</h1>
         </div>
         <div class="col-xs-12 pagination-cont">
             <ul class="pagination">
