--- a/client/index.html
+++ b/client/index.html
@@ -10,22 +10,25 @@
     <meta name="description" content="Gate Keeper's landing page">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/united/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <!--<link rel="shortcut icon" href="/favicon.ico"/>-->
 </head>
 
 <body>
-    <div class="col-xs-12 header">
-        <div class="col-xs-10">
-            <span class="header-text">Gate Keeper</span><span class="header-subtext">a smarter solution to restricted access management</span>
-        </div>
-        <div class="col-xs-1">
-            <a class="login-button" href="/login"><span>Login</span></a>
-        </div>
-        <div class="col-xs-1">
-            <a href="/signup">
-                <div class="signup-button btn btn-primary">Sign up</div>
-            </a>
+    <div class="head-cont container navbar-default">
+        <div class="col-xs-12 header">
+            <div class="head-left col-xs-10">
+                <span class="header-text primary">Gate Keeper</span><span class="header-subtext">a smarter solution to restricted access management</span>
+            </div>
+            <div class="head-right col-xs-1 nav navbar-nav">
+                <a class="login-button" href="/login"><span>Login</span></a>
+            </div>
+            <div class="head-right col-xs-1">
+                <a href="/signup">
+                    <div class="signup-button btn btn-success">Sign up</div>
+                </a>
+            </div>
         </div>
     </div>
     <div class="container">
