--- a/client/login.html
+++ b/client/login.html
@@ -10,14 +10,17 @@
     <meta name="description" content="Gate Keeper's login page">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/united/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <!--<link rel="shortcut icon" href="/favicon.ico"/>-->
 </head>
 
 <body>
-    <div class="col-xs-12 header">
-        <div class="col-xs-10">
-            <span class="header-text">Gate Keeper</span><span class="header-subtext">a smarter solution to restricted access management</span>
+    <div class="head-cont container navbar-default">
+        <div class="col-xs-12 header">
+            <div class="head-left col-xs-12">
+                <span class="header-text primary">Gate Keeper</span><span class="header-subtext">a smarter solution to restricted access management</span>
+            </div>
         </div>
     </div>
     <div class="container">
