--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -125,14 +125,14 @@
                     <h4>Add a user by their name.</h4>
                     <div class="form-horizontal">
                         <div class="form-group">
-                            <label class="control-label col-sm-3" for="name">Name:</label>
-                            <div class="col-sm-9">
+                            <label class="control-label col-xs-3" for="name">Name:</label>
+                            <div class="col-xs-9">
                                 <input type="input" class="form-control" id="name" placeholder="Enter name">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-sm-3" for="room">Room number:</label>
-                            <div class="col-sm-9">
+                            <label class="control-label col-xs-3" for="room">Room number:</label>
+                            <div class="col-xs-9">
                                 <input type="input" class="form-control" id="room" placeholder="Enter room number">
                             </div>
                         </div>
