--- a/client/login.html
+++ b/client/login.html
@@ -26,19 +26,19 @@
     <div class="container">
         <div class="form-horizontal">
             <div class="form-group">
-                <label class="control-label col-sm-2" for="username">Username:</label>
-                <div class="col-sm-10">
+                <label class="control-label col-xs-2" for="username">Username:</label>
+                <div class="col-xs-10">
                     <input type="input" class="form-control" id="username" placeholder="Enter username">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-2" for="pwd">Password:</label>
-                <div class="col-sm-10">
+                <label class="control-label col-xs-2" for="pwd">Password:</label>
+                <div class="col-xs-10">
                     <input type="password" class="form-control" id="pwd" placeholder="Enter password">
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
+                <div class="col-xs-offset-2 col-xs-10">
                     <button class="btn btn-default">Submit</button>
                 </div>
             </div>
@@ -72,7 +72,7 @@
 
             $.ajax("", {
 
-            })
+            });
 
             var success = true;
 
