Gate Keeper -> GateKeeper

--- a/client/login.html
+++ b/client/login.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Gate Keeper login</title>
+    <title>GateKeeper login</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Carl Schriever">
-    <meta name="description" content="Gate Keeper's login page">
+    <meta name="description" content="GateKeeper login page">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/united/bootstrap.min.css">
@@ -19,7 +19,7 @@
     <div class="head-cont container navbar-default">
         <div class="col-xs-12 header">
             <div class="head-left col-xs-12">
-                <span class="header-text primary">Gate Keeper</span><span class="header-subtext">a smarter solution to restricted access management</span>
+                <span class="header-text primary">GateKeeper</span><span class="header-subtext">a smarter solution to restricted access management</span>
             </div>
         </div>
     </div>
