--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Carl Schriever">
-    <meta name="description" content="Gate Keeper's admin dashboard">
+    <meta name="description" content="GateKeeper admin dashboard">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/united/bootstrap.min.css">
