Edit index.html to reflect the app's purpose

--- a/client/index.html
+++ b/client/index.html
@@ -33,14 +33,18 @@
     </div>
     <div class="container">
         <div class="col-xs-12 goals">
-            <h1>Our Goals</h1>
-            <div class="goal col-xs-6">
-                <h3>Goal 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat quos, enim tempore. Quasi ipsam voluptates
-                    excepturi minus delectus, dicta aliquam ratione quia nisi cupiditate, esse odit? Repellendus nemo, voluptatibus
-                    quis!</p>
+            <h1>Welcome</h1>
+            <div class="goal col-xs-12">
+                <h3>We are GateKeeper</h3>
+                <p>GateKeeper is an access management system designed to eliminate the hassels of getting guest badges, in addition to
+                    streamlining the process for people who need to come in and out on a regular basis. By taking advantage of something
+                    that people have on them at nearly all times, their phones, people never have to worry about losing their IDs. Couple 
+                    that with the fact that it is easy to manage temporary and permanant access from the server side of things, and you've got
+                    an incredibly powerful solution. That's not even mentioning the fact that the whole system can be airgapped if need be for extra
+                    security. Sign up today to radically change the way you think about access management!
+                </p>
             </div>
-            <div class="goal col-xs-6">
+            <!--<div class="goal col-xs-6">
                 <h3>Goal 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quos atque culpa, quo magnam. Deleniti voluptas
                     fugit, asperiores ea esse nemo, minus odit sequi obcaecati odio dolores delectus vel reprehenderit.</p>
@@ -55,7 +59,7 @@
                 <h3>Goal 4</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, eveniet sit ab modi, cum harum exercitationem,
                     eius veniam ex repellendus non officiis quisquam consequatur. Quis enim a tempore totam, quos?</p>
-            </div>
+            </div>-->
         </div>
     </div>
 
