--- a/client/index.html
+++ b/client/index.html
@@ -11,11 +11,11 @@
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/united/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <!--<link rel="shortcut icon" href="/favicon.ico"/>-->
 </head>
 
-<body>
+<body class="special_body">
     <div class="head-cont container navbar-default">
         <div class="col-xs-12 header">
             <div class="head-left col-xs-10">
@@ -44,6 +44,8 @@
                     security. Sign up today to radically change the way you think about access management!
                 </p>
             </div>
+
+            <img class="bgImage" src="css/GateKeeperAlpha.png" alt="">
             <!--<div class="goal col-xs-6">
                 <h3>Goal 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quos atque culpa, quo magnam. Deleniti voluptas
