Maybe fixes? I don't know

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -54,7 +54,7 @@
                 <tr>
                     <td>{{this.name}}</td>
                     <td>{{this.publicKey}}</td>
-                    <td><img src="{{this.photoURL}}" alt="Photo Missing"></td>
+                    <td><img src="{{this.pictureURL}}" alt="Photo Missing"></td>
                     <td>{{this.reason}}</td>
                     <td>
                         <div data-key="{{this.publicKey}}" class="grant-button btn btn-success">Grant</div><br>
